--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 body {
-  background-color: lightblue;
+  background-color: white
 }
 
 h1 {
   color: blue;
   text-align: center;
+  font-size: 20px;
 }
 
 body {
   font-family: verdana;
-  font-size: 20px;
+  font-size: 10px;
 }
