--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,16 @@
 body {
-  background-color: white
+  background-color: transparent;
 }
 
 h1 {
   color: blue;
+  font-family: verdana;
   text-align: center;
   font-size: 20px;
 }
 
 body {
+  text-align:center;
   font-family: verdana;
   font-size: 10px;
 }
