--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,37 @@ h1 {
   color: blue;
   font-family: verdana;
   text-align: center;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 body {
   text-align:center;
   font-family: verdana;
-  font-size: 10px;
+  font-size: 15px;
+}
+
+
+button{
+ display:inline-block;
+ padding:0.35em 1.2em;
+ border:0.1em solid #FFFFFF;
+ margin:0 0.3em 0.3em 0;
+ border-radius:0.12em;
+ box-sizing: border-box;
+ text-decoration:none;
+ font-family:'Roboto',sans-serif;
+ font-weight:300;
+ color:#FFFFFF;
+ text-align:center;
+ transition: all 0.2s;
+}
+button:hover{
+ color:#000000;
+ background-color:#FFFFFF;
+}
+@media all and (max-width:30em){
+  button1{
+  display:block;
+  margin:0.4em auto;
+ }
 }
