--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 
-button{
+a.button1{
  display:inline-block;
  padding:0.35em 1.2em;
  border:0.1em solid #FFFFFF;
@@ -30,12 +30,12 @@ button{
  text-align:center;
  transition: all 0.2s;
 }
-button:hover{
+a.button1:hover{
  color:#000000;
  background-color:#FFFFFF;
 }
 @media all and (max-width:30em){
-  button1{
+ a.button1{
   display:block;
   margin:0.4em auto;
  }
