--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ a.button1{
  border-radius:0.12em;
  box-sizing: border-box;
  text-decoration:none;
- font-family:'Roboto',sans-serif;
+ font-family:'verdana',sans-serif;
  font-weight:300;
  color:#FFFFFF;
  text-align:center;
