--- a/style.css
+++ b/style.css
@@ -25,10 +25,17 @@ h2 {
   font-size: 25px;
 }
 
+@media screen and (max-width: 600px) {
+  img{
+      width: 100%;
+      height: auto;
+  }
+
+}
 
 
-img.test {
-    width: 30%;
+img{
+    width: 33%;
     height: auto;
 }
 
