--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h1 {
   margin-bottom:10px
   text-align: center;
   font-size: 36px;
+  opacity: 0.7;
 }
 
 h2 {
@@ -25,6 +26,8 @@ h2 {
   display:inline-block;
   text-align: center;
   font-size: 25px;
+  /* opacity: 0.5; */
+
 }
 
 a {
@@ -43,6 +46,12 @@ p.blog {
   width: 70%;
 }
 
+p.shrug{
+  font-size: 900%;
+  line-height: 1%;
+  height: 1%;
+}
+
 @media (max-width: 600px) {
   img{
       width: 60%;
@@ -50,15 +59,10 @@ p.blog {
     }
 
   p.blog {
-    margin-left: 0%;
+    font-size: 4vw;
+    margin-left: -20%;
     margin-right: 0%;
     text-align: left;
-    width: 100%;
+    width: 140%;
     }
-}
-
-p.shrug{
-  font-size: 900%;
-  line-height: 1%;
-  height: 1%;
 }
