--- a/style.css
+++ b/style.css
@@ -52,14 +52,19 @@ p.shrug{
   height: 1%;
 }
 
+#profile{
+  width:20%;
+  height:auto;
+}
+
 @media (max-width: 600px) {
-  img{
-      width: 60%;
+  #profile{
+      width: 40%;
       height: auto;
     }
 
   p.blog {
-    font-size: 4vw;
+    font-size: 5vw;
     margin-left: -20%;
     margin-right: 0%;
     text-align: left;
